Add widgets examples and doc

--- a/PureJava/org.csstudio.swt.xygraph/html/GettingStarted.html
+++ b/PureJava/org.csstudio.swt.xygraph/html/GettingStarted.html
@@ -31,7 +31,8 @@
 </ul>
 <p>
 These jar files are generally available with your eclipse installation under eclipse/plugins folder.
-Also add these jars to your project build path.Now you are ready to Rock and Roll! </p>
+These jars are also included in project org.csstudio.swt.xygraph.pureJavaTest in git repository.
+Add these jars to your project build path. Now you are ready to start! </p>
 <p>
 If you don't have org.eclipse.draw2d in your eclipse/plugins folder, you should also install draw2d plugin. 
 	    Draw2D is part of Eclipse GEF project, If you don't have GEF installed in your eclipse, 
@@ -139,7 +140,7 @@ trace.setPointStyle(PointStyle.<i>XCROSS</i>);</pre>
 	<h3>4. Learn from examples</h3>
 	<p>Once you have finished the first simple example, you have already mastered 90% of usage of SWT XYGraph! 
 	So now you can just learn from examples!</p>
-	<h4>4.1 XYGraph with Toolbar example</h4>
+	<h4>4.1 XYGraph example</h4>
 	<ul>
 	<li><a href = "../examples/BarChartExample.java">Bar and Area Chart </a>
 	<p>
@@ -152,5 +153,32 @@ trace.setPointStyle(PointStyle.<i>XCROSS</i>);</pre>
 	<p><img src="./img/ComprehensiveExample.gif" alt=""></p> </li>
 	
 	</ul>
+	<h4>4.2 Intensity Graph</h4>
+	<p>Intensity Graph draw a 2D array data based on a color map.</p>
+	<ul>
+	<li><a href = "../../org.csstudio.swt.widgets/Examples/IntensityGraphExample.java">IntensityGraphExample.java</a>
+	<p>
+	<img src="./img/IntensityGraph.png" alt=""></p> </li>
+	</ul>
+	
+	<h4>4.3 Gauge</h4>
+	<ul>
+	<li><a href = "../../org.csstudio.swt.widgets/Examples/GaugeExample.java">GaugeExample.java</a>
+	<p>
+	<img src="./img/Gauge.png" alt=""></p> </li>
+	</ul>
+	<h4>4.4 Meter</h4>
+	<ul>
+	<li><a href = "../../org.csstudio.swt.widgets/Examples/MeterExample.java">MeterExample.java</a>
+	<p>
+	<img src="./img/Meter.png" alt=""></p> </li>
+	</ul>
+	<h4>4.5 Progress Bar</h4>
+	<ul>
+	<li><a href = "../../org.csstudio.swt.widgets/Examples/ProgressBarExample.java">ProgressBarExample.java</a>
+	<p>
+	<img src="./img/progressbar.png" alt=""></p> </li>
+	</ul>
+	
 </body>
 </html>
