--- a/PureJava/org.csstudio.swt.xygraph/html/GettingStarted.html
+++ b/PureJava/org.csstudio.swt.xygraph/html/GettingStarted.html
@@ -5,7 +5,19 @@
 <title>Getting Started with SWT XYGraph</title>
 </head>
 <body>
-<h3>Table of Contents</h3>
+<p>
+ <a href="https://code.google.com/p/swt-xy-graph"> 
+ <img src="https://code.google.com/p/swt-xy-graph/logo?cct=1341167064"
+ alt="Logo" align=left> 
+ </a>
+ <a href="https://code.google.com/p/swt-xy-graph"><b><font size=4>SWT XYGraph</font></b></a><br>
+ <font color="gray">
+ A scientific and engineering widgets library such as graph, meter, gauge and knob for SWT and GEF applications. 
+</font>
+ </p>
+
+<h3>Getting Started</h3>
+<h4>Table of Contents</h4>
 <ul>
 	 <li class="toc_lvl1">
         <a href="#Installation">1. Installations</a>
