Add more examples

--- a/PureJava/org.csstudio.swt.xygraph/html/GettingStarted.html
+++ b/PureJava/org.csstudio.swt.xygraph/html/GettingStarted.html
@@ -2,7 +2,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=GBK"/>
 <link rel="stylesheet" href="default.css" type="text/css" />
-<title>Getting Started with SWT XYGraph</title>
+<title>Getting Started</title>
 </head>
 <body>
   <br>
@@ -17,7 +17,7 @@
 </font>
  </p>
  <hr>
-<h3>Getting Started</h3>
+<h3>Documentation</h3>
 <h4>Table of Contents</h4>
 <ul>
 	 <li class="toc_lvl1">
@@ -47,6 +47,22 @@
       <li class="toc_lvl2">
         <a href="#ProgressBar">4.5 Progress Bar</a>
     </li>
+    <li class="toc_lvl2">
+        <a href="#Knob">4.6 Knob</a>
+    </li>
+        <li class="toc_lvl2">
+        <a href="#ScaledSlider">4.7 Scaled Slider</a>
+    </li>
+        <li class="toc_lvl2">
+        <a href="#Thermometer">4.8 Thermometer</a>
+    </li>
+        <li class="toc_lvl2">
+        <a href="#Tank">4.9 Tank</a>
+    </li>
+        <li class="toc_lvl2">
+        <a href="#MultipleWidgets">4.10 Multiple Widgets Example</a>
+    </li>
+
 </ul>
 	<a name="Installation"></a>
 	<h3> 
@@ -226,6 +242,41 @@ trace.setPointStyle(PointStyle.<i>XCROSS</i>);</pre>
 	<li><a href = "../../org.csstudio.swt.widgets/Examples/ProgressBarExample.java">ProgressBarExample.java</a>
 	<p>
 	<img src="./img/progressbar.png" alt=""></p> </li>
+	</ul>
+	<a name="Knob"></a>
+	<h4>4.6 Knob</h4>
+	<ul>
+	<li><a href = "../../org.csstudio.swt.widgets/Examples/KnobExample.java">KnobExample.java</a>
+	<p>
+	<img src="./img/KnobExample.gif" alt=""></p> </li>
+	</ul>
+	<a name="ScaledSlider"></a>
+	<h4>4.7 Scaled Slider</h4>
+	<ul>
+	<li><a href = "../../org.csstudio.swt.widgets/Examples/ScaledSliderExample.java">ScaledSliderExample.java</a>
+	<p>
+	<img src="./img/ScaledSliderExample.gif" alt=""></p> </li>
+	</ul>
+	<a name="Thermometer"></a>
+	<h4>4.8 Thermometer</h4>
+	<ul>
+	<li><a href = "../../org.csstudio.swt.widgets/Examples/ThermometerExample.java">ThermometerExample.java</a>
+	<p>
+	<img src="./img/ThermoExample.gif" alt=""></p> </li>
+	</ul>
+	<a name="Tank"></a>
+	<h4>4.9 Tank</h4>
+	<ul>
+	<li><a href = "../../org.csstudio.swt.widgets/Examples/TankExample.java">TankExample.java</a>
+	<p>
+	<img src="./img/TankExample.gif" alt=""></p> </li>
+	</ul>
+	<a name="#MultipleWidgets"></a>
+	<h4>4.10 Multiple Wigets Example</h4>
+	<ul>
+	<li><a href = "../../org.csstudio.swt.widgets/Examples/MultipleWidgetsExample.java">MultipleWidgetsExample.java</a>
+	<p>
+	<img src="./img/MultipleWidgetsExample.gif" alt=""></p> </li>
 	</ul>
 	
 </body>
