--- a/PureJava/org.csstudio.swt.xygraph/html/Screenshots.html
+++ b/PureJava/org.csstudio.swt.xygraph/html/Screenshots.html
@@ -34,6 +34,10 @@
 	<li>Tank
 	<p>
 	<img src="./img/Tank.gif" alt=""></p> </li>	
+	<li>Use it as an Eclipse plugin
+	<p>
+	<img src="./img/WidgetsExampleView.gif" alt=""></p> </li>	
 	</ul>		
+	
 </body>
 </html>
